--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backColor"
+    >
     <include layout="@layout/toolbar"/>
     <com.pyconindia.pycon.view.SlidingTabLayout
           android:id="@+id/sliding_tabs"
@@ -11,7 +13,7 @@
           android:elevation="2dp"
         android:background="@color/colorPrimary"
            />
-
+    
     <android.support.v4.view.ViewPager
 	    android:id="@+id/pager"
 	    android:layout_width="match_parent"
