--- a/res/layout/schedule_list_item.xml
+++ b/res/layout/schedule_list_item.xml
@@ -3,13 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_marginTop="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
      >
      <!-- Custom view -->
+     <com.pyconindia.pycon.view.CustomListDrawable 
+         android:layout_weight=".1"
+         android:layout_width="0dp"
+         android:layout_height="match_parent"
+         android:paddingTop="10dp"
+         android:paddingLeft="10dp"
+         android:paddingRight="10dp"
+         />
     <TextView 
         android:id="@+id/timeView"
         android:layout_width="0dp"
+        android:textColor="@android:color/black"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:textSize="10dp"
+        android:paddingTop="10dp"
         android:layout_weight=".2"
         />
     <LinearLayout
