--- a/res/layout/talk_item.xml
+++ b/res/layout/talk_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    >
     <RelativeLayout 
         android:layout_width="60dp"
         android:layout_height="wrap_content"
@@ -29,23 +31,27 @@
         
             <ImageView 
                 android:id="@+id/like"
-                android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+                android:layout_marginLeft="3dp"
+            android:layout_marginRight="0dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                  android:layout_below="@+id/audiText"
-                android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="15dp"
+                android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginTop="5dp"
                 android:src="@drawable/pycon_favorite"
                 />
             <ImageView 
                 android:id="@+id/feedback"
-                android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="15dp"
+                android:layout_marginLeft="3dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:layout_below="@+id/audiText"
-                android:layout_width="15dp"
+                android:layout_width="26dp"
                 android:layout_toRightOf="@+id/like"
-            android:layout_height="15dp"
+            android:layout_height="26dp"
                 android:src="@drawable/pycon_feedback"
                 />
     </RelativeLayout>
@@ -55,9 +61,11 @@
         <TextView 
             android:id="@+id/title"
             android:layout_alignParentTop="true" 
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="5dp"
             android:layout_toRightOf="@+id/img"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="27dp"
             android:text="Some title"
             android:maxLines="2"
             android:textSize="12sp"
@@ -65,6 +73,8 @@
             />
         <TextView 
             android:id="@+id/desc"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="5dp"
             android:layout_below="@+id/title"
             android:layout_toRightOf="@+id/img"
             android:layout_width="match_parent"
