--- a/res/layout/schedule_list_item.xml
+++ b/res/layout/schedule_list_item.xml
@@ -21,7 +21,7 @@
         android:textColor="@android:color/black"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:textSize="10dp"
+        android:textSize="12sp"
         android:paddingTop="10dp"
         android:layout_weight=".2"
         />
