--- a/res/layout/activity_schedule.xml
+++ b/res/layout/activity_schedule.xml
@@ -4,7 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/backColor"
     >
-    <include layout="@layout/toolbar"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:elevation="3dp">
+        </android.support.v7.widget.Toolbar>
     <com.pyconindia.pycon.view.SlidingTabLayout
           android:id="@+id/sliding_tabs"
           android:layout_width="match_parent"
