--- a/res/layout/toolbar.xml
+++ b/res/layout/toolbar.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
-        android:elevation="3dp"
-        android:layout_height="wrap_content">
+        android:elevation="3dp">
 </android.support.v7.widget.Toolbar>
