--- a/res/layout/activity_details.xml
+++ b/res/layout/activity_details.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
     android:layout_height="match_parent"
-    
+    android:background="@android:color/white"
         >
         <include layout="@layout/toolbar"/>
 <ScrollView 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_below="@+id/toolbar"
+    android:background="@android:color/white"
      >
     <RelativeLayout 
         android:layout_width="match_parent"
@@ -44,8 +45,8 @@
         >
         <ImageView 
             android:paddingLeft="20dp"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:id="@+id/feedbackIcon"
             android:src="@drawable/submit_feedback"
@@ -56,7 +57,7 @@
             android:id="@+id/feedbackText"
             android:textSize="20sp"
             android:gravity="center"
-            android:text="@string/submit_feedback"
+            android:text="@string/give_feedback"
             android:textColor="@android:color/white"
             />
     </RelativeLayout>
