--- a/res/layout/toolbar.xml
+++ b/res/layout/toolbar.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
+        android:theme="@style/actionbar"
+        app:popupTheme="@style/Theme.AppCompat.NoActionBar"
         android:elevation="3dp">
 </android.support.v7.widget.Toolbar>
