--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -12,13 +12,38 @@
         -->
     </style>
 
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
    <item name="windowNoTitle">true</item>
    <item name="windowActionBarOverlay">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-   <item name="colorAccent">@android:color/white</item>
+   <item name="colorAccent">@color/colorPrimary</item>
     </style>
+<style name="actionbar" parent="Theme.AppCompat.NoActionBar">
+  <!-- android:textColorPrimary is the  color of the title text
+       in the Toolbar, in the Theme.AppCompat theme:  -->
+  <item name="android:textColorPrimary">@color/abc_primary_text_material_dark</item>
 
+  <!-- android:textColorPrimaryInverse is the  color of the title
+       text in the Toolbar, in the Theme.AppCompat.Light theme:  -->
+  <!-- <item name="android:textColorPrimaryInverse">@color/abc_primary_text_material_light</item> -->
+
+  <!-- android:actionMenuTextColor is the color of the text of
+        action (menu) items in the Toolbar, at least in the
+        Theme.AppCompat theme.
+        For some reason, they already get the textColorPrimary
+        when running on API 21, but not on older versions of
+        Android, so this is only necessary to support older
+        Android versions.-->
+        <item name="actionMenuTextColor">@color/abc_primary_text_material_dark</item>
+  <!-- android:textColorSecondary is the color of the menu
+       overflow icon (three vertical dots) -->
+  <item name="android:textColorSecondary">@color/abc_secondary_text_material_dark</item>
+
+  <!-- This would set the toolbar's background color,
+        but setting this also changes the popup menu's background,
+        even if we define popupTheme for our <Toolbar> -->
+  <!-- <item name="android:background">@color/color_primary</item> -->
+</style>
 </resources>
