--- a/res/layout/activity_feedback.xml
+++ b/res/layout/activity_feedback.xml
@@ -1,24 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
     <include layout="@layout/toolbar"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        
+        android:layout_below="@+id/toolbar"
         android:background="@android:color/white"
         >
-        <LinearLayout 
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:id="@+id/feedback"
-		    android:orientation="vertical" >
-    
-    </LinearLayout>
+        <RelativeLayout 
+        android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_alignParentTop="true"
+		    android:id="@+id/feedback" >
+		    </LinearLayout>
+    <RelativeLayout 
+        android:id="@+id/feedbackLayout"
+        android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal"
+    android:background="@color/colorPrimary"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="5dp"
+    android:elevation="3dp"
+    android:layout_below="@+id/feedback"
+    android:layout_alignParentBottom="true"
+        >
+        <ImageView 
+            android:paddingLeft="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/feedbackIcon"
+            android:src="@drawable/submit_feedback"
+            />
+        <TextView 
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/feedbackText"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:text="@string/submit_feedback"
+            android:textColor="@android:color/white"
+            />
         
-    </ScrollView>
+    </RelativeLayout>
+    <View 
+        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/feedbackLayout"
+        android:background="@android:color/white"
+        />
+    </RelativeLayout>
     
-
-</LinearLayout>
+    </ScrollView>
+</RelativeLayout>
