--- a/res/layout/talk_item.xml
+++ b/res/layout/talk_item.xml
@@ -76,6 +76,7 @@
             android:id="@+id/desc"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:layout_below="@+id/title"
             android:layout_toRightOf="@+id/img"
             android:layout_width="match_parent"
