--- a/res/layout/toolbar.xml
+++ b/res/layout/toolbar.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
         android:theme="@style/actionbar"
-        app:popupTheme="@style/Theme.AppCompat.NoActionBar"
+        app:popupTheme="@style/Theme.AppCompat.Light"
         android:elevation="3dp">
 </android.support.v7.widget.Toolbar>
