--- a/res/layout/text_question.xml
+++ b/res/layout/text_question.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:hint="@string/comments"
-    android:inputType="text"
     android:textColor="@android:color/black"
     android:textColorHint="@android:color/darker_gray"
+    android:inputType="textMultiLine"
     >
     
 </EditText>
