Audi 4 changed to buffet hall

--- a/res/layout/talk_item.xml
+++ b/res/layout/talk_item.xml
@@ -14,6 +14,7 @@
             android:id="@+id/audiImg"
             android:layout_centerInParent="true"
             android:layout_width="15dp"
+            android:layout_marginTop="5dp"
             android:layout_alignParentTop="true" 
             android:layout_height="15dp"
             android:src="@drawable/pycon_audi_1"
@@ -22,9 +23,10 @@
             android:id="@+id/audiText"
             android:layout_below="@+id/audiImg"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:text="@string/audi"
             android:textSize="10sp"
+            android:minLines="2"
             android:layout_marginTop="5dp"
             android:gravity="center_horizontal"
             android:textColor="@android:color/black"
