--- a/res/layout/activity_details.xml
+++ b/res/layout/activity_details.xml
@@ -31,34 +31,21 @@
         />
     </RelativeLayout>
 </ScrollView>
-<RelativeLayout 
-        android:id="@+id/feedback"
-        android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="horizontal"
-    android:background="@color/colorPrimary"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginBottom="5dp"
-    android:elevation="3dp"
+<ImageButton style="@style/AppTheme"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    android:id="@+id/feedback"
+    android:layout_marginRight="25dp"
+    android:layout_marginBottom="25dp"
+    android:scaleType="fitXY"
+    android:paddingLeft="10dp"
+    android:paddingRight="15dp"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
+    android:adjustViewBounds="true"
+    android:elevation="5dp"
+    android:layout_alignParentRight="true"
     android:layout_alignParentBottom="true"
-        >
-        <ImageView 
-            android:paddingLeft="20dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:id="@+id/feedbackIcon"
-            android:src="@drawable/submit_feedback"
-            />
-        <TextView 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/feedbackText"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:text="@string/give_feedback"
-            android:textColor="@android:color/white"
-            />
-    </RelativeLayout>
+    android:src="@drawable/submit_feedback"
+    android:background="@drawable/circle" />
 </RelativeLayout>
