--- a/res/layout/activity_details.xml
+++ b/res/layout/activity_details.xml
@@ -21,6 +21,7 @@
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="10dp"
         />
     
     <View 
